.k8s/nginx-deployment.yml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
# kubectl create -f ./.k8s/nginx-deployment.yml
# kubectl delete -f ./.k8s/nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.14.2
          ports:
            - containerPort: 80
