.k8s/nginx-service.yml
# https://kubernetes.io/docs/concepts/services-networking/service/
# kubectl create service -f ./.k8s/nginx-service.yml
# kubectl delete service -f ./.k8s/nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/name: proxy
  ports:
    - name: name-of-service-port
      protocol: TCP
      port: 80
      targetPort: http-web-svc
