.k8s/ingress.yml
# #####################################################################
# Ingress
#
# https://marketplace.digitalocean.com/apps/nginx-ingress-controller
# #####################################################################

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-echo
spec:
  ingressClassName: nginx
  rules:
    - host: api.fromtheforest.io
      http:
        paths:
          - path: /v1/graphql/user
            pathType: Prefix
            backend:
              service:
                name: user-subgraph-service
                port:
                  number: 4000
