.k8s/nginx-ingress.yml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
# kubectl create -f ./.k8s/nginx-deployment.yml
# kubectl delete -f ./.k8s/nginx-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
    - http:
        paths:
          - path: /graphql
            pathType: Prefix
            backend:
              service:
                name: test
                port:
                  number: 80
